# IxDhy

./: CMakeLists.txt  HYPRLAND_INTEGRATION.md  README.md  rhythm-gui  test_wallust_integration.sh
gui/: game_state.lua  hyprland_colors.lua  main.lua  test_theme.lua
gui/examples/: hyprland-colors-example.conf  test-colors.conf
